--- a/src/style.scss
+++ b/src/style.scss
@@ -1,29 +1,33 @@
 @mixin mobile {
     @media screen and (max-width: 453px) {
-        @content;        
+        @content;
     }
 }
+
 @mixin laptop {
     @media screen and (min-width: 453px) {
-        @content;        
+        @content;
     }
 }
+
 @mixin select-from-end($num) {
     &:nth-last-child(#{$num}) {
-     @content
-    }
-  }
-
-@mixin select-between($first,$last) {
-    &:nth-child(n+#{$first}):nth-child(-n+#{$last}) {
-      @content
+        @content
     }
 }
-@mixin random-bgr(){
+
+@mixin select-between($first, $last) {
+    &:nth-child(n+#{$first}):nth-child(-n+#{$last}) {
+        @content
+    }
+}
+
+@mixin random-bgr() {
     background-color: rgb(random(255), random(255), random(255));
-    
-  }
-.loginContainer{
+
+}
+
+.loginContainer {
     background-image: url('./img/background.png');
     background-size: cover;
     height: 100vh;
@@ -31,7 +35,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    .loginWrapper{
+
+    .loginWrapper {
         background-color: aliceblue;
         align-items: center;
         position: relative;
@@ -44,45 +49,57 @@
         width: 450px;
         margin: 20px 20px;
         padding: 30px 10px;
-        .logo{
-            img{
-            height:252px;
-            width: 252px;
+
+        .logo {
+            img {
+                height: 252px;
+                width: 252px;
             }
+
             margin-bottom: 20px;
-            margin-top: 20px;    
+            margin-top: 20px;
         }
-        button{
-            
+
+        button {
+
             margin: 10px;
             // padding: 10px;
             background-color: transparent;
             border: none;
             overflow: hidden;
 
-              background-position: center;
-            @include laptop{
+            background-position: center;
+
+            @include laptop {
                 // display: none;
             }
-            :hover{
+
+            :hover {
                 cursor: pointer;
             }
         }
     }
 
-    
+
 }
 
-.homeContainer{
-    background-image: url('./img/background.png');
-    background-size: cover ;
+.homeContainer {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
+    background-color: transparent;
 
-    .topNav{
+    .backgroundImage {
+        position: fixed;
+        top: 0;
+        display: flex;
+        content: url('./img/background.png');
+        width: 100vw;
+        height: 100vh;
+        object-fit: cover;
+    }
+
+    .topNav {
         position: fixed;
         display: flex;
         top: 0px;
@@ -94,35 +111,46 @@
         justify-content: center;
         box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
         background-color: rgba(240, 248, 255, 0.884);
-        .topNavWrapper{
+
+        .topNavWrapper {
             display: flex;
             justify-content: space-between;
             width: 1200px;
             min-width: 53px;
             height: 60px;
-            
-            .flatLogo{
+            position: relative;
+
+            .flatLogo {
                 margin: 10px 5px 10px 10px;
 
-                @include laptop(){
+                @include laptop() {
                     margin: 0px 10px 15px 40px;
-                    
+
                 }
-                img{
-                   width: 140px;
-                    // min-height: 30px;
-                    @include laptop(){
-                        // width: 20vw;
-                        // max-height: 100px;
-                        height: 100%;
-                        width: auto;
-                        // height: 60px;
+
+                button {
+                    background-color: transparent;
+                    border: none;
+                    cursor: pointer;
+
+                    img {
+                        width: 140px;
+
+                        // min-height: 30px;
+                        @include laptop() {
+                            // width: 20vw;
+                            // max-height: 100px;
+                            height: 100%;
+                            width: auto;
+                            // height: 60px;
+                        }
                     }
-                    }
+                }
             }
-            
-            .searchContainer{
+
+            .searchContainer {
                 min-width: 50px;
+                flex-direction: column;
                 width: 500px;
                 margin: 10px 10px 10px 10px;
                 background-color: rgba(248, 247, 247, 0.801);
@@ -130,10 +158,12 @@
                 position: relative;
                 border-color: rgba(66, 66, 66, 0.281);
                 outline: none;
-                border-style:solid;
+                border-style: solid;
                 border-width: 1px;
                 padding-right: 24px;
-                .searchInput{
+                display: flex;
+
+                .searchInput {
                     // width: 50px;
                     // max-width: 480px;
                     position: relative;
@@ -145,12 +175,13 @@
                     border-radius: 7px;
                     border-color: rgba(66, 66, 66, 0.281);
                     outline: none;
-                    border-style:solid;
+                    border-style: solid;
                     border-width: 1px;
                     padding-left: 20px;
-                    
+
                 }
-                .SearchIcon{
+
+                .SearchIcon {
                     position: absolute;
                     right: 0px;
                     top: 0px;
@@ -162,84 +193,433 @@
                     color: #5d5d5e;
                     cursor: pointer;
                 }
-                .searchSuggestions{
+
+                .searchSuggestions {
+                    display: flex;
+                    flex-direction: column;
                     position: absolute;
                     background-color: aliceblue;
                     width: 100%;
+                    margin-top: 40px;
                     cursor: default;
                     border-radius: 0 0 15px 15px;
-                    box-shadow:0 3px 10px rgb(0 0 0 / 0.2);
-                    li{
+                    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+
+                    li {
                         margin: 10px 10px;
                         padding: 10px 10px;
                         list-style: none;
                         overflow: hidden;
-                        &:hover{
+                        button{
+                            // background-color: transparent;
+                            border: none;
+                            width: 100%;
+                        }
+
+                        &:hover {
                             background-color: rgba(97, 97, 97, 0.075);
                             border-radius: 7px;
                         }
-                        
+
                     }
                 }
-                
-               
+
+
             }
-            .profileButton{
-                display:grid;
-                width: 35px;
-                
-                height: 35px;
-                
-                border-radius: 50%;
-                background-color: purple;
-                // justify-content: center;
-                min-width: 30px;
-                // align-items: center;
-                margin: auto;
-                margin-right: 10px;
-                // ::after{
-                //     min-width: 30px;
-                // width: 50px;
-                // min-height: 30px;
-                // height: 50px;
+
+            .Navbuttons {
+                display: flex;
+                position: relative;
+                right: 0px;
+                top: 0px;
+                height: 100%;
+                // margin-top: 10px;
+                margin-bottom: 10px;
+                justify-items: center;
+
+                button {
+                    // width: 40px;
+                    // height: 40px;
+                    margin-right: 10px;
+                    border-radius: 50%;
+                    padding: 0%;
+
+                    border: none;
+                    cursor: pointer;
+                    overflow: hidden;
+                    // justify-content: baseline;
+                }
+
+                .signoutButton {
+                    color: black;
+                }
+
+                .postRumor {
+                    padding: none;
+                    margin: 7px;
+                    width: 45px;
+                    // background-color: #1D7EF0;
+                    background-color: #5d5d5e3f;
+
+                }
+
+                // .profileButton {
+                //     img {
+                //         width: 100%;
+                //         height: 100%;
+                //     }
+
+                //     // @include mobile{
+                //     //     @include select-between(1,5){
+                //     //         background-color: red;
+                //     //         display: none;
+
+                //     // }
+                //     // }
+
                 // }
-                @include mobile{
-                    @include select-between(1,5){
-                        background-color: red;
-                        display: none;
-                    
-                }
-                }
-               
             }
+
         }
-        
-        
+
+
     }
-    .postFeedsContainer{
+
+    .postFeedsContainer {
+        background-color: transparent;
+        // position: relative;
         position: relative;
         right: 50%;
-        // top: 0px;
-        // overflow-y:scroll;
+        // left: 0px;
         width: 360px;
         display: flex;
-    
         flex-direction: column;
         margin-top: 70px;
-        
-        .postsContainer{
 
+
+        // height: 100vh;
+        @include mobile {
+            right: 0;
+        }
+
+        .postsContainer {
+            display: flex;
             margin: 10px 10px;
-            // overflow-y:scroll;
+            // overflow-y:auto;
             border-radius: 15px;
-    
-            height: 200px;
+            flex-direction: column;
+            // height: 300px;
             // @include random-bgr();
             background-color: aliceblue;
-            
-            
+
+            .postTop {
+                display: flex;
+                height: 50px;
+                overflow: hidden;
+                align-items: center;
+
+                width: 100%;
+
+
+
+                .profileName {
+                    display: flex;
+                    white-space: nowrap;
+                    overflow: hidden;
+                    // text-overflow: "----";
+                    text-overflow: clip;
+                    font-weight: normal;
+                    width: 100%;
+                }
+
+                .ProfilePhoto {
+                    border-radius: 50%;
+                    padding: none;
+                    background-color: transparent;
+                    border: none;
+                    margin: 5px;
+                    height: 40px;
+                    width: 40px;
+                    align-items: center;
+                }
+            }
+
+            .postPhoto {
+                display: flex;
+                // width: 100%;
+                height: 100%;
+                // min-height: 100%;
+                object-fit: contain;
+                max-height: 60vh;
+                object-fit: fill;
+
+            }
+
+            .likes {
+                margin: 0;
+                padding-left: 9px;
+            }
+
+            .comment {
+                margin: 0 9px 0 9px;
+                text-align: justify;
+                font-weight: normal;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                display: -webkit-box;
+                // -webkit-line-clamp: 2; /* number of lines to show */
+                // line-clamp: 2;
+                -webkit-box-orient: vertical;
+
+                .readMore {
+                    font-weight: 500;
+                    cursor: pointer;
+                }
+
+            }
+
+            .empty {
+                height: 15px;
+            }
+
+        }
+
+    }
+
+    .commentsBoxWrapper {
+        background-color: transparent;
+        position: fixed;
+        left: 50%;
+        display: flex;
+        flex-direction: column;
+        margin-top: 70px;
+        top: 0;
+        width: 340px;
+        padding: 10px 10px 10px 10px;
+
+        @include mobile {
+            left: auto;
+        }
+
+        .commentBox {
+
+            display: flex;
+            position: relative;
+            border-radius: 15px;
+            flex-direction: column;
+            background-color: aliceblue;
+            height: 50vh;
+            width: 100%;
+            padding-bottom: 10px;
+            overflow: hidden;
+
+            .commentBoxTop {
+                display: flex;
+                position: relative;
+                padding: 0 0 0 10px;
+                align-items: center;
+                height: 50px;
+                justify-content: space-between;
+            }
+
+            .comments {
+                display: flex;
+                flex-direction: column;
+                height: 100%;
+                scroll-behavior: smooth;
+                overflow-y: scroll;
+            }
+
+            .loading {
+                height: 100%;
+            }
+
+            .commentInputWrapper {
+                display: flex;
+                position: relative;
+                margin: 1px 5px 2px 3px;
+
+                .commentInput {
+                    display: flex;
+                    width: 100%;
+                    position: relative;
+                    padding-left: 20px;
+                    height: 100%;
+                    background-color: rgba(248, 247, 247, 0.801);
+                    border-radius: 15px;
+                    border-color: rgba(66, 66, 66, 0.281);
+                    outline: none;
+                    border-style: solid;
+                    border-width: 1px;
+                    padding-left: 20px;
+                    padding-right: 40px;
+                    height: 40px;
+                }
+
+                button {
+                    // display: flex;
+                    position: absolute;
+                    right: 0px;
+                    // left: 0px;
+                    // top: 0px;
+                }
+            }
+        }
+    }
+
+    .postRumorWrapper {
+        display: flex;
+        margin: 80px 10px 10px 10px;
+        position: relative;
+        width: 600px;
+        min-width: 310px;
+        // height: 200px;
+        color: black;
+        background-color: aliceblue;
+        border-radius: 15px;
+        flex-direction: column;
+        padding: 10px;
+
+        .top {
+            display: flex;
+            width: 100%;
+            padding: 5px;
+
+            h3 {
+                display: flex;
+                align-self: center;
+                margin: 0px;
+                padding: 0px;
+                padding-left: 10px;
+            }
+        }
+
+        .bottom {
+            display: flex;
+            justify-content: space-between;
+        }
+
+        .imageWrapper {
+            display: flex;
+            position: relative;
+            // align-items: flex-start;
+            // width: 100%;
+            align-self: center;
+
+            img {
+                display: flex;
+                position: relative;
+                max-height: 60vh;
+                max-width: 100%;
+                object-fit: scale-down;
+
+            }
+
+            .closeButton {
+                // display: ;
+                position: absolute;
+                // height: 40px;
+                top: 5px;
+                background-color: #5d5d5e34;
+                right: 5px;
+                width: 20px;
+                height: 20px;
+
+                color: white;
+            }
+        }
+    }
+
+    .userProfileErrorWrapper {
+        display: flex;
+        margin: 80px 10px 10px 10px;
+        position: relative;
+        width: 600px;
+        min-width: 310px;
+        // height: 200px;
+        color: black;
+        background-color: aliceblue;
+        border-radius: 15px;
+        flex-direction: column;
+        padding: 10px;
+
+    }
+    .noPostFound{
+        display: flex;
+        width: 100%;
+        flex-direction: column;
+        margin-top: 15px;
+        background-color: aliceblue;
+        border-radius: 15px;
+        justify-content: center;
+        // padding: 10px;
+        h3{
+            display: flex;
+            justify-content: center;
+            margin: 4px;
+        }
+        
+    }
+    .userBoxWrapper {
+        background-color: transparent;
+        position: fixed;
+        left: 50%;
+        display: flex;
+        flex-direction: column;
+        margin-top: 70px;
+        top: 0;
+        width: 340px;
+        padding: 10px 10px 10px 10px;
+
+        @include mobile {
+            left: auto;
+        }
+
+        .userBox {
+
+            display: flex;
+            position: relative;
+            border-radius: 15px;
+            flex-direction: column;
+            background-color: aliceblue;
+            height: 300%;
+            width: 100%;
+            padding-bottom: 10px;
+            overflow: hidden;
+
+            .userBoxTop {
+                display: flex;
+                position: relative;
+                padding: 0 0 0 10px;
+                align-items: center;
+                height: 50px;
+                // flex-direction: column;
+                justify-content: space-between;
+            }
+
+            .profilePic {
+                display: flex;
+                justify-content: center;
+                margin: 10px;
+            }
+          
+
+            h4 {
+                display: flex;
+                justify-content: center;
+                font-weight: normal;
+                padding: none;
+                margin: 5px 0;
+            }
+
+            h5 {
+                display: flex;
+                justify-content: center;
+                font-weight: normal;
+                color: #5d5d5e;
+            }
+
         }
     }
 
 }
-
