--- a/src/style.scss
+++ b/src/style.scss
@@ -210,7 +210,8 @@
                         padding: 10px 10px;
                         list-style: none;
                         overflow: hidden;
-                        button{
+
+                        button {
                             // background-color: transparent;
                             border: none;
                             width: 100%;
@@ -544,7 +545,8 @@
         padding: 10px;
 
     }
-    .noPostFound{
+
+    .noPostFound {
         display: flex;
         width: 100%;
         flex-direction: column;
@@ -552,14 +554,16 @@
         background-color: aliceblue;
         border-radius: 15px;
         justify-content: center;
+
         // padding: 10px;
-        h3{
+        h3 {
             display: flex;
             justify-content: center;
             margin: 4px;
         }
-        
+
     }
+
     .userBoxWrapper {
         background-color: transparent;
         position: fixed;
@@ -602,7 +606,7 @@
                 justify-content: center;
                 margin: 10px;
             }
-          
+
 
             h4 {
                 display: flex;
@@ -622,4 +626,92 @@
         }
     }
 
+}
+
+.trybox {
+    display: flex;
+    background-color: green;
+    height: 60px;
+    padding: 0px 300px 0px 300px;
+
+
+}
+
+.SearchBar {
+    display: flex;
+    position: relative;
+    // height: 100%;
+    width: 100%;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    background-color: transparent;
+
+    .searchBarWrapper {
+        width: 100%;
+        // height: 100%;
+        display: flex;
+        position: relative;
+        flex-direction: column;
+        background-color: rgb(36, 66, 92);
+
+        input.searchInput {
+            display: flex;
+            position: relative;
+            top:0;
+            // bottom: 0px;
+            height: 40px;
+            // position: relative;
+            // padding: 10px;
+            padding-left: 20px;
+            // width: 100%;
+            right: 0;
+            left: 0;
+            // // margin: 10px 10px 10px 10px;
+            background-color: rgba(248, 247, 247, 0.801);
+            border-radius: 7px;
+            border-color: rgba(66, 66, 66, 0.281);
+            outline: none;
+            border-style: solid;
+            // border-width: 10px;
+            padding-left: 20px;
+            // height: 60px;
+
+
+        }
+
+        .SearchIcon {
+            position: absolute;
+            top: 0px;
+            height: 100%;
+            right: 0px;
+        }
+
+        .searchSuggestions {
+            display: flex;
+            flex-direction: column;
+            position: relative;
+            width: 100%;
+            // margin-top: 100%;
+            // top:100px;
+
+            button {
+                display: flex;
+                border: none;
+                background-color: yellow;
+                // background-color: aliceblue;
+                padding: 10px;
+                margin: 1px;
+                cursor: pointer;
+                border-radius: 7px;
+
+            }
+
+            :hover {
+                // background-color: rgba(97, 97, 97, 0.075);
+                background-color: rgba(179, 66, 66, 0.801);
+
+
+            }
+        }
+    }
 }
