--- a/src/style.scss
+++ b/src/style.scss
@@ -27,7 +27,43 @@
 
 }
 
+::selection {
+    color: black;
+    background: #3390ff;
+}
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+    position: relative;
+    background-color: #e0e2f7;
+    color: #e0e2f7;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+    // border-radius: 10px;
+    margin-top: 60px;
+    color: #e0e2f7;
+    background-image: linear-gradient(#643dba,
+            #7343b1,
+            #844aa9,
+            #9551a0,
+            #8853aa,
+        );
+
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background-color: aquamarine;
+    background: #e0e2f769;
+    border-radius: 10px;
+}
+
 .loginContainer {
+
     background-image: url('./img/background.png');
     background-size: cover;
     height: 100vh;
@@ -82,6 +118,77 @@
 
 
 }
+.downloadContainer {
+
+    background-image: url('./img/background.png');
+    background-size: cover;
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    .downloadWrapper {
+        background-color: aliceblue;
+        align-items: center;
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        border-radius: 15px;
+        // padding: 20px 40px;
+        overflow: hidden;
+        min-width: 300px;
+        width: 400px;
+        margin: 20px 20px;
+        padding: 30px 10px;
+
+        .logo {
+            img {
+                height: 150px;
+                width: 150px;
+            }
+
+            margin-bottom: 20px;
+            margin-top: 20px;
+        }
+        .downloadButton{
+            height: 50px;
+            border-radius: 30px;
+            box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+            // background-color: #e9eff7;
+            // background-color: #1d9bf0;
+            // color: aliceblue;
+
+        }
+        .orlogin{
+            margin-top: 10px;
+            color:#3390ff;
+        }
+
+        // button {
+
+        //     margin: 10px;
+        //     // padding: 10px;
+        //     // background-color: transparent;
+        //     border: none;
+        //     overflow: hidden;
+
+        //     background-position: center;
+
+        //     @include laptop {
+        //         // display: none;
+        //     }
+
+        //     :hover {
+        //         cursor: pointer;
+        //         background-color: #5cff33;
+        //     }
+        // }
+    }
+
+
+}
+
 
 .homeContainer {
     display: flex;
@@ -97,11 +204,14 @@
         width: 100vw;
         height: 100vh;
         object-fit: cover;
+
+
     }
 
     .topNav {
         position: fixed;
         display: flex;
+        margin-right: 10px;
         top: 0px;
         left: 0px;
         width: 100vw;
@@ -429,6 +539,7 @@
                 height: 100%;
                 scroll-behavior: smooth;
                 overflow-y: scroll;
+
             }
 
             .loading {
@@ -465,6 +576,75 @@
                     // top: 0px;
                 }
             }
+
+            ::-webkit-scrollbar-track {
+                margin-top: 0;
+                background-image: none;
+            }
+
+            ::-webkit-scrollbar-thumb {
+                background-color: #5d5d5e67;
+            }
+        }
+    }
+
+    .userSearchResultsBoxWrapper {
+
+        background-color: transparent;
+        position: fixed;
+        left: 50%;
+        display: flex;
+        flex-direction: column;
+        margin-top: 70px;
+        top: 0;
+        width: 340px;
+        padding: 10px 10px 10px 10px;
+
+        .userSearchResultsBox {
+            display: flex;
+            position: relative;
+            border-radius: 15px;
+            flex-direction: column;
+            background-color: aliceblue;
+            max-height: 50vh;
+            width: 100%;
+            padding-bottom: 10px;
+            overflow: hidden;
+
+
+            .userSearchResultsBoxTop {
+
+                display: flex;
+                position: relative;
+                padding: 0 0 0 10px;
+                align-items: center;
+                height: 50px;
+                justify-content: space-between;
+            }
+
+            .users {
+                scroll-behavior: smooth;
+                overflow-y: scroll;
+                padding-top: 5px;
+                .singleuser{
+                    display: flex;
+                    height: 50px;
+                    align-items: center;
+                }
+               
+            }
+            ::-webkit-scrollbar-track {
+                margin-top: 0;
+                background-image: none;
+            }
+
+            ::-webkit-scrollbar-thumb {
+                background-color: #5d5d5e67;
+            }
+        }
+        .nouserfound{
+            display: flex;
+            align-self: center;
         }
     }
 
@@ -625,6 +805,7 @@
 
         }
     }
+    
 
 }
 
@@ -641,6 +822,8 @@
     display: flex;
     position: relative;
     // height: 100%;
+    max-width: 500px;
+    min-width: 60px;
     width: 100%;
     padding-top: 5px;
     padding-bottom: 5px;
@@ -652,13 +835,16 @@
         display: flex;
         position: relative;
         flex-direction: column;
-        background-color: rgb(36, 66, 92);
+        background-color: rgba(126, 129, 131, 0);
+        object-fit: cover;
+
+
 
         input.searchInput {
             display: flex;
-            position: relative;
-            top:0;
-            // bottom: 0px;
+            position: absolute;
+            top: 0;
+            bottom: 0px;
             height: 40px;
             // position: relative;
             // padding: 10px;
@@ -690,17 +876,25 @@
             display: flex;
             flex-direction: column;
             position: relative;
-            width: 100%;
             // margin-top: 100%;
-            // top:100px;
+            background-color: rgb(248, 247, 247);
+            // top:95%;
+            // top: 45px;
+            width: 100%;
+            padding-top: 47px;
+            box-shadow: 1px 1px 5px 4px rgba(71, 71, 71, 0.219);
+
+            // padding: 5px;
+            border-radius: 15px;
+            padding-bottom: 5px;
 
             button {
                 display: flex;
                 border: none;
-                background-color: yellow;
+                background-color: transparent;
                 // background-color: aliceblue;
                 padding: 10px;
-                margin: 1px;
+                margin: 2px 5px;
                 cursor: pointer;
                 border-radius: 7px;
 
@@ -708,10 +902,11 @@
 
             :hover {
                 // background-color: rgba(97, 97, 97, 0.075);
-                background-color: rgba(179, 66, 66, 0.801);
+                background-color: rgba(151, 151, 151, 0.192);
 
 
             }
         }
     }
+
 }
