--- a/src/style.scss
+++ b/src/style.scss
@@ -632,9 +632,10 @@
                 font-weight: normal;
                 margin: 5px;
             }
-           @include table(){
-            -webkit-box-shadow: 0 0 10px rgb(0,0,0);
-            -moz-box-shadow: 0 0 10px rgb(0,0,0);
+            @include table(){
+                display: none;
+                -webkit-box-shadow: 0 0 10px rgb(0,0,0);
+                -moz-box-shadow: 0 0 10px rgb(0,0,0);
            }
            .appLogo{
             height: 70%;
